--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>MEDIUM article about coding</title>
 </head>
 <body>
+  <img src="https://i.imgur.com/d8NPEna.png" target="_blank" alt="crocodile-logo">
   <h1>Please do learn to code</h1>
   <figure>
-  <img src="https://orange.codeberryschool.com/content/images/project-assets/medium-article-cover.jpg" alt="coders">
     <figcaption>Learning to code at a Free Code Camp Toronto coffee-and-code.</figcaption>
 </figure>
 <article>
