--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MEDIUM article about coding</title>
 </head>
 <body>
-  <img src="https://i.imgur.com/d8NPEna.png" target="_blank" alt="crocodile-logo" style="width:auto; height:auto;;">
+  <img src="https://i.imgur.com/d8NPEna.png" target="_blank" alt="crocodile-logo" style="width:25em; height:25em;">
   <h1>Please do learn to code</h1>
   <figure>
     <figcaption>Learning to code at a Free Code Camp Toronto coffee-and-code.</figcaption>
