--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>MEDIUM article about coding</title>
+  <title>jump a bug</title>
 </head>
 <body>
-  <img src="https://i.imgur.com/d8NPEna.png" target="_blank" alt="crocodile-logo" style="width:25em; height:25em;">
-  <h1>Please do learn to code</h1>
-  <figure>
-    <figcaption>Learning to code at a Free Code Camp Toronto coffee-and-code.</figcaption>
-</figure>
+  <img src="https://i.imgur.com/d8NPEna.png" target="_blank" alt="crocodile-logo" style="width:500px; height:500px;">
+  <h1>THIS IS A VERY DRAFT OF MY PORTFOLIO PAGE</h1>
+
 </body>
 </html>
